--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,16 +23,28 @@
         <input matInput placeholder="Eg. John" type="text" required name="selectedContact.name"
                [(ngModel)]="selectedContact.name">
       </mat-form-field>
+      <div *ngIf="selectedContact.phNum.length != 0">
+        <mat-label>Phone Number</mat-label>
+        <div *ngFor="let phNumber of selectedContact.phNum; let phoneNoCount=index"> 
+          <mat-form-field appearance="fill">
+            <input matInput placeholder="eg. 999999999"
+                  min="1000000000" max="9999999999" type="number" required
+                  name="phoneNumber-{{phoneNoCount}}"
+                  [(ngModel)]="selectedContact.phNum[phoneNoCount]">
+          </mat-form-field>
+        </div>
+      </div>
       <mat-form-field appearance="fill">
         <mat-label>Phone Number</mat-label>
-        <div *ngFor="let numCount of numList">
         <input matInput placeholder="eg. 999999999"
-               min="1000000000" max="9999999999" type="number" required
-               name="selectedContact.phNum[numCount]"
-               [(ngModel)]="selectedContact.phNum[numCount]">
-        <button mat-button type="button" (click)="addField()">Add</button>
-        </div>
+              min="1000000000" max="9999999999" type="number" required
+              name="1"
+              [(ngModel)]="phoneNumber">
       </mat-form-field>
+    
+        
+      <button mat-button type="button" (click)="addPhoneNumberField()">Add</button>
+
       <mat-form-field appearance="fill">
         <mat-label>Email</mat-label>
         <input matInput type="email" required name="selectedContact.email"
